(7.3) - (---) - Visibility fixes

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -203,8 +203,7 @@ div.table-responsive.col-md-6 > img {
 }
 
 form{
-    width:250px;
-    margin:50px auto;
+    width:33%;
     padding:15px 20px;
     background:#f5f5f5;
     background-color:rgba(245,245,245,0.95);
